improve player profile
